User Agent String for JavaFX is not correct

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: javafx
    • web

      Below current User Agent String for JavaFX need to be changed from JavaFX/8.0 to JavaFX/9.

      Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/602.1 (KHTML, like Gecko) JavaFX/8.0 Safari/602.1

      This change is applicable only for 9 version.

            Assignee:
            Murali Billa
            Reporter:
            Murali Billa
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: