8174866: User Agent String for JavaFX is not correct

Reviewed-by: kcr